--- a/home.html
+++ b/home.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
 </head>
 <body>
@@ -86,7 +86,7 @@
             <button type="button" class="btn btn-outline-danger play" onclick="letPlay()"> Play</button>
     </div>
     
-    <script src="script.js"></script>
-    <script src="script2.js"></script>
+    <script src="js/script.js"></script>
+    <script src="js/script2.js"></script>
 </body>
 </html>
