--- a/index.html
+++ b/index.html
@@ -13,48 +13,48 @@
     <div class="memory-game">
         <div class="memory-card">
             <img class="font-face" src="images/font-face.png"/>
-            <img class="back-face" src="" alt="">
+            <img class="back-face" src="" alt="" id="" >
         </div>
         <div class="memory-card">
             <img class="font-face" src="images/font-face.png"/>
-            <img class="back-face" src="" alt="">
+            <img class="back-face" src="" alt="" id="">
         </div>
         <div class="memory-card">
             <img class="font-face" src="images/font-face.png"/>
-            <img class="back-face" src="" alt="">
+            <img class="back-face" src="" alt="" id="">
         </div> <div class="memory-card">
             <img class="font-face" src="images/font-face.png"/>
-            <img class="back-face" src="" alt="">
+            <img class="back-face" src="" alt="" id="">
         </div> <div class="memory-card">
             <img class="font-face" src="images/font-face.png"/>
-            <img class="back-face" src="" alt="">
+            <img class="back-face" src="" alt="" id="">
         </div> <div class="memory-card">
             <img class="font-face" src="images/font-face.png"/>
-            <img class="back-face" src="" alt="">
+            <img class="back-face" src="" alt="" id="">
         </div>
         <div class="memory-card">
             <img class="font-face" src="images/font-face.png"/>
-            <img class="back-face" src="" alt="">
+            <img class="back-face" src="" alt="" id="">
         </div>
         <div class="memory-card">
             <img class="font-face" src="images/font-face.png"/>
-            <img class="back-face" src="" alt="">
+            <img class="back-face" src="" alt="" id="">
         </div>
         <div class="memory-card">
             <img class="font-face" src="images/font-face.png"/>
-            <img class="back-face" src="" alt="">
+            <img class="back-face" src="" alt="" id="">
         </div>
         <div class="memory-card">
             <img class="font-face" src="images/font-face.png"/>
-            <img class="back-face" src="" alt="">
+            <img class="back-face" src="" alt="" id="">
         </div>
         <div class="memory-card">
             <img class="font-face" src="images/font-face.png"/>
-            <img class="back-face" src="" alt="">
+            <img class="back-face" src="" alt="" id="">
         </div>
         <div class="memory-card">
             <img class="font-face" src="images/font-face.png"/>
-            <img class="back-face" src="" alt="">
+            <img class="back-face" src="" alt="" id="">
         </div>
        
     </div>
@@ -66,7 +66,7 @@
             </div>
             <div class="timer">
                 <h1>Timer</h1>
-                <span id="time">0</span>
+                <span id="time">00:00:00</span>
             </div>
             <button type="button" id="pause" class="btn btn-outline-warning" onclick="pauseGame()" >Pause</button>
         </div>
